--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   cinnamon-screensaver-2.4.0.tar.gz: 8f30b0bb071afabacb231b8b12c29a2d014fdbeb
-sources:
   cinnamon-screensaver-2.4.2.tar.gz: 61b0cc1824c3ee90eee6b25f43126920a34c8234
+sources:
+  cinnamon-screensaver-2.6.0.tar.gz: d865a0e44c8e2fd8b7653be6bd4595086d5d7d22
